# omnidict

./: .gitignore  Cargo.toml  README.md  shell.nix
assets/: dictum.prompt  gender.prompt  qa.prompt
src/: brain.rs  commands.rs  data.rs  discord.rs  language.rs  lib.rs  main.rs  pfc.rs  prelude.rs  thing_delegator.rs
src/data/: user.rs
src/util/: discord.rs  language.rs
