[package]
name = "the-project"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
serde_json = "1.0.59"
twilight-gateway = "0.9"
twilight-http = "0.9"
twilight-model = "0.9"

[dependencies.reqwest]
version = "0.11.10"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]
