[package]
name = "omnidict"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
rand = "0.7.2"
redis = "0.21.5"
serde_json = "1.0.59"
twilight-gateway = "0.9"
twilight-http = "0.9"
twilight-model = "0.9"
twilight-embed-builder = "0.9"
anyhow = "1.0.56"

[dependencies.reqwest]
version = "0.11.10"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[features]
fairseq = []
default = []
