[package]
name = "omnidict"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
finalfusion = "0.17.2"
futures-util = "0.3"
rand = "0.7.2"
serde = "1.0.136"
serde_json = "1.0.59"
sled = "0.34.7"
twilight-gateway = "0.9"
twilight-http = "0.9"
twilight-model = "0.9"
twilight-embed-builder = "0.9"
anyhow = "1.0.56"

[dependencies.reqwest]
version = "0.11.10"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[features]
fairseq = []
default = []
